--- a/ModelValidation/Views/Home/MakeBooking.cshtml
+++ b/ModelValidation/Views/Home/MakeBooking.cshtml
@@ -7,7 +7,7 @@
 <h3>Записаться</h3>
 @using (Html.BeginForm())
 {
-	@Html.ValidationSummary()
+	@Html.ValidationSummary(true)
 	<p>Ваше имя: @Html.EditorFor(m => m.ClientName)</p>
 	<p>Дата записи: @Html.EditorFor(m => m.Date)</p>
 	<p>@Html.EditorFor(m => m.TermsAccepted) Я принимаю правила и условия</p>
