--- a/ModelValidation/Views/Home/MakeBooking.cshtml
+++ b/ModelValidation/Views/Home/MakeBooking.cshtml
@@ -8,8 +8,11 @@
 @using (Html.BeginForm())
 {
 	@Html.ValidationSummary(true)
+	<p>@Html.ValidationMessageFor(m => m.ClientName)</p>
 	<p>Ваше имя: @Html.EditorFor(m => m.ClientName)</p>
+	<p>@Html.ValidationMessageFor(m => m.Date)</p>
 	<p>Дата записи: @Html.EditorFor(m => m.Date)</p>
+	<p>@Html.ValidationMessageFor(m => m.TermsAccepted)</p>
 	<p>@Html.EditorFor(m => m.TermsAccepted) Я принимаю правила и условия</p>
 	<input type="submit" value="Записаться" />
 }
